--- a/cloudbuild-front.yml
+++ b/cloudbuild-front.yml
@@ -1,8 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/deep-front:latest', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/deep-front:latest', '-f', 'frontend/Dockerfile', 'frontend']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/deep-front:latest']
 
 images:
-  - 'gcr.io/$PROJECT_ID/deep-front:latest'
+  - 'gcr.io/$PROJECT_ID/frontend-app:latest'
