--- a/.github/workflows/deploy-front.yml
+++ b/.github/workflows/deploy-front.yml
@@ -1,4 +1,4 @@
-name: Build e Deploy para o GCR e o Cloud Run
+name: Build and Deploy to GCR and Cloud Run
 
 on:
   push:
@@ -16,9 +16,11 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
       with:
+        version: 'latest'
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA }}
-        export_default_credentials: true
+
+    - name: Authenticate to Google Cloud
+      run: echo "${{ secrets.GCP_SA }}" | gcloud auth activate-service-account --key-file=-
 
     - name: Build Docker image
       run: |
@@ -39,6 +41,6 @@ jobs:
           --allow-unauthenticated
         gcloud run deploy backend \
           --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/backend:latest \
-          --region us-central1 \
+          --region us-east1 \
           --platform managed \
           --allow-unauthenticated
