--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.1.7  # Especifique a versão do Terraform que deseja usar
+        terraform_version: 1.1.7
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
@@ -58,11 +58,11 @@ jobs:
       working-directory: ./terraform
 
     - name: Terraform Plan
-      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1"
+      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}"
       working-directory: ./terraform
 
     - name: Terraform Apply
-      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -auto-approve
+      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}" -auto-approve
       working-directory: ./terraform
       env:
         credentials_json: ${{ secrets.GCP_SA }}
@@ -114,3 +114,41 @@ jobs:
           --region us-east1 \
           --platform managed \
           --allow-unauthenticated
+
+    terraform-cloudrun:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    if: ${{ secrets.SKIP_CLOUD_RUN != 'true' }}
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.1.7
+
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA }}
+
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        version: 'latest'
+
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
+
+    - name: Terraform Plan
+      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}"
+      working-directory: ./terraform
+
+    - name: Terraform Apply
+      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}" -auto-approve
+      working-directory: ./terraform
+      env:
+        credentials_json: ${{ secrets.GCP_SA }}
