--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+env:
+  APPLY_CLOUD_RUN: ${{ secrets.APPLY_CLOUD_RUN }}
+  SKIP_CLOUD_RUN: ${{ secrets.SKIP_CLOUD_RUN }}
+
 jobs:
   setup-gcs:
     runs-on: ubuntu-latest
@@ -58,19 +62,18 @@ jobs:
       working-directory: ./terraform
 
     - name: Terraform Plan
-      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}"
+      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ env.SKIP_CLOUD_RUN }}"
       working-directory: ./terraform
 
     - name: Terraform Apply
-      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}" -auto-approve
+      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ env.SKIP_CLOUD_RUN }}" -auto-approve
       working-directory: ./terraform
       env:
-        credentials_json: ${{ secrets.GCP_SA }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA }}
 
   build-and-deploy:
     runs-on: ubuntu-latest
     needs: terraform
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -83,7 +86,7 @@ jobs:
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
-        credentials_json: ${{ secrets.gA }}
+        credentials_json: ${{ secrets.GCP_SA }}
 
     - name: Configure Docker to use Google Artifact Registry
       run: |
@@ -100,6 +103,7 @@ jobs:
         docker push us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/deep-back/backend:latest
 
     - name: Deploy to Cloud Run Frontend
+      if: ${{ env.SKIP_CLOUD_RUN == 'false' }}
       run: |
         gcloud run deploy frontend \
           --image us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/deep-front/frontend:latest \
@@ -108,6 +112,7 @@ jobs:
           --allow-unauthenticated
     
     - name: Deploy to Cloud Run Backend
+      if: ${{ env.SKIP_CLOUD_RUN == 'false' }}
       run: |
         gcloud run deploy backend \
           --image us-east1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/deep-back/backend:latest \
@@ -116,39 +121,38 @@ jobs:
           --allow-unauthenticated
 
   terraform-deploy:
-      runs-on: ubuntu-latest
-      needs: build-and-deploy
-      if: ${{ secrets.SKIP_CLOUD_RUN != 'true' }}
-    
-      steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    if: ${{ env.APPLY_CLOUD_RUN == 'true' }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.1.7
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.1.7
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA }}
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA }}
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          version: 'latest'
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        version: 'latest'
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
 
-      - name: Terraform Plan
-        run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}"
-        working-directory: ./terraform
+    - name: Terraform Plan
+      run: terraform plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ env.APPLY_CLOUD_RUN }}"
+      working-directory: ./terraform
 
-      - name: Terraform Apply
-        run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ secrets.APPLY_CLOUD_RUN }}" -auto-approve
-        working-directory: ./terraform
-        env:
-          credentials_json: ${{ secrets.GCP_SA }}
+    - name: Terraform Apply
+      run: terraform apply -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=us-east1" -var="apply_cloud_run=${{ env.APPLY_CLOUD_RUN }}" -auto-approve
+      working-directory: ./terraform
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA }}
