--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -121,7 +121,8 @@ jobs:
   terraform-deploy:
     runs-on: ubuntu-latest
     needs: build-and-deploy
-    if: ${{ env.APPLY_CLOUD_RUN == 'true' }}
+    
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -140,6 +141,11 @@ jobs:
       uses: google-github-actions/setup-gcloud@v2
       with:
         version: 'latest'
+
+    - name: env step
+      run: echo "A variavel é aplicada aqui"
+      env:
+        SKIP_CLOUD_RUN: ${{ secrets.SKIP_CLOUD_RUN }}
 
     - name: Terraform Init
       run: terraform init
